--- a/framework/css/main.css
+++ b/framework/css/main.css
@@ -1,61 +1,64 @@
-*{
-	border: 1px solid red; 
-}
 
-* {
-	box-sizing: border-box;
-}
 
-.row {
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
+h1, h3 {
+    font-family: 'Droid Serif', serif;
 }
-
-.col-1 {
-    width: 8.33%;
+p{
+    font-family: 'Droid Sans', sans-serif;
+    line-height: 2;
 }
-
-.col-2 {
-    width: 16.66%;
+h2, h4{
+    font-family: 'Lato', sans-serif;
 }
-
-.col-3 {
-    width: 25%;
+h3{
+    font-size: 32px;
+    font-weight: 700;
+    padding: 2em 0 0 0; 
 }
-
-.col-4 {
-    width: 33.33%;
+h4{
+    color: #919191;
+    font-size: 24px; 
+    padding: 1em 0 0 0; 
 }
-
-.col-5 {
-    width: 41.66%;
+h3, p{
+    color: #506077; 
 }
-
-.col-6 {
-    width: 50%;
+body{
+    font-size: 18px;
 }
-
-.col-7 {
-    width: 58.33%;
+.row{
+    max-width: 700px;
+    margin: 0 auto; 
+    padding: 1em; 
 }
-
-.col-8 {
-    width: 66.66%;
+.container-fluid{
+    padding: 0; 
 }
-
-.col-9 {
-    width: 75%;
+.cover{
+   height: 100vh; 
+   width: 100vw;
+    background: url('img/cover.png') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  position: relative; 
 }
-
-.col-10 {
-    width: 83.33%;
+.headline{
+    color:#ffffff; 
+    position: relative;
+    top: 70%;
 }
-
-.col-11 {
-    width: 91.66%;
+.img-caption{
+    color: #919191; 
+    text-align: center;
+    margin-top: 0.5em;
 }
-
-.col-12 {
-    width: 100%;
-}
+.img{
+    margin: 3em 0 3em 0;
+ }
+ .qoute{
+    font-family: 'Droid Serif', serif;
+    color:#919191; 
+    padding: 2em 2em; 
+ }
