--- a/framework/css/main-small.css
+++ b/framework/css/main-small.css
@@ -63,17 +63,58 @@ body {
  }
 
  /*STRUCTURE */
- .cover {
- height: 100vh; 
- width: 100vw;
- max-width: 100%;
-  background: url('img_src/cover.png') no-repeat center center; 
+@media screen and (min-width: 641px) {
+  .cover{
+  background: url('img/cover-large.png') no-repeat center center; 
+  height: 100vh; 
+  width: 100vw;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  position: relative;
+  }
+}
+
+
+@media screen and (max-width: 640px) {
+  .cover{
+  background: url('img/cover-medium.png') no-repeat center center;
+  height: 100vh; 
+  width: 100vw;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   position: relative; 
+  }
 }
+
+/*
+  WHY THIS DOESN'T WORK ? I DON'T KNOW
+  cover {
+  position: relative;
+  display: block;
+}
+
+.cover-img {
+    width: 100vw;
+    display: inline-block;
+    vertical-align: middle;
+    font: 0/0 serif;
+    text-shadow: none;
+    color: transparent;
+    background-size: 100%;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-image: url("img_src/cover.png");
+}
+
+.cover-img-inner {
+    display: inline-block;
+    height: 0;
+    padding-top: 63.3%;
+}*/
 
 .row {
     max-width: 700px;
