feat try source element to picture, not work

--- a/framework/css/main-small.css
+++ b/framework/css/main-small.css
@@ -105,6 +105,10 @@ body {
   }
 }
 
+.cover_img{
+  max-width: 100%;
+}
+
 .row {
     max-width: 700px;
     margin: 0 auto; 
@@ -116,4 +120,4 @@ body {
 
 .img {
     margin: 1em 0 1em 0;
- }
+}
