--- a/framework/css/main-small.css
+++ b/framework/css/main-small.css
@@ -281,5 +281,14 @@ footer {
 footer i {
   padding: 0.5em; 
   color: #506077; 
+}
 
+nav {
+  background-color: #08263B;
+}
+
+.icon-bar {
+  height: 4px; 
+  width: 30px;
+  background-color: #f8f8f8;
 }
